# dachshund

./: README.md  dachshund.py  pyproject.toml  requirements.txt
dachshund/: #dachshund.py#  #fetch.py#  __init__.py  __main__.py  dachshund.config  dachshund.py  fetch.py  requirements.txt
scripts/: dachshund.service  dachshundstart.sh  dachshundstop.sh
