[tool.poetry]
name = "dachshund"
version = "1.3.3"
description = "usenet searching telegram bot"
authors = ["dermatty <stephan@untergrabner.at>"]
license = "GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
aiosignal = "^1.3.1"
anyio = "^3.6.2"
async-timeout = "^4.0.2"
attrs = "^23.1.0"
autopep8 = "^2.0.2"
black = "^23.3.0"
certifi = "^2022.12.7"
charset-normalizer = "^3.1.0"
click = "^8.1.3"
flake8 = "^6.0.0"
frozenlist = "^1.3.3"
furl = "^2.1.3"
gpg = "^1.10.0"
h11 = "^0.14.0"
httpcore = "^0.17.0"
httpx = "^0.24.0"
idna = "^3.4"
jedi = "^0.18.2"
mccabe = "^0.7.0"
multidict = "^6.0.4"
mypy-extensions = "^1.0.0"
orderedmultidict = "^1.0.1"
packaging = "^23.1"
parso = "^0.8.3"
pathspec = "^0.11.1"
platformdirs = "^3.2.0"
pur = "^7.1.0"
pycodestyle = "^2.10.0"
pyflakes = "^3.0.1"
requests = "^2.28.2"
rfc3986 = "^2.0.0"
ruff = "^0.0.261"
setproctitle = "^1.3.2"
six = "^1.16.0"
sniffio = "^1.3.0"
toml = "^0.10.2"
urllib3 = "^1.26.15"
yapf = "^0.32.0"
yarl = "^1.8.2"
fridagram = "^0.1.6"

[tool.poetry.scripts]
dachshund = "dachshund.dachshund:run"

[[tool.poetry.source]]
name = "etec"
url = "http://etec.iv.at:8123"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
