[project]
name = "dachshund"
version = "1.4.1"
description = "usenet searching telegram bot"
authors = [
    {name = "dermatty",email = "stephan@untergrabner.at"}
]
license = "GPL v3"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "aiohttp>=3.8.4",
    "aiosignal>=1.3.1",
    "anyio>=4.4.0",
    "async-timeout>=4.0.2",
    "attrs>=23.1.0",
    "autopep8>=2.0.2",
    "black>=24.3.0",
    "certifi>=2024.0.0",
    "charset-normalizer>=3.1.0",
    "click>=8.1.3",
    "flake8>=7.0.0",
    "frozenlist>=1.3.3",
    "furl>=2.1.3",
    "gpg>=1.10.0",
    "h11>=0.14.0",
    "httpcore>=1.0.0",
    "httpx>=0.27.0",
    "idna>=3.4",
    "mccabe>=0.7.0",
    "multidict>=6.0.4",
    "mypy-extensions>=1.0.0",
    "orderedmultidict>=1.0.1",
    "packaging>=24.0",
    "parso>=0.8.3",
    "pathspec>=0.12.0",
    "platformdirs>=4.2.0",
    "pur>=7.1.0",
    "pycodestyle>=2.10.0",
    "pyflakes>=3.0.1",
    "requests>=2.28.2",
    "rfc3986>=2.0.0",
    "setproctitle>=1.3.2",
    "six>=1.16.0",
    "sniffio>=1.3.0",
    "toml>=0.10.2",
    "urllib3>=2.2.0",
    "yarl>=1.8.2",
    "fridagram>=0.1.6",
]

[tool.poetry.dependencies]
fridagram = { source = "btec" }
python = ">=3.13,<4.0"

[tool.poetry.scripts]
dachshund = "dachshund.dachshund:run"

[[tool.poetry.source]]
name = "btec"
url = "http://btec.iv.at:8123"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
